[package]
name = "planetmap"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
parry = ["parry3d-f64"]

[dependencies]
na = { package = "nalgebra", version = "0.33" }
slab = "0.4.2"
hashbrown = "0.15"
parry3d-f64 = { version = "0.17.0", optional = true }
num-traits = "0.2.19"

[dev-dependencies]
criterion = "0.5.1"
approx = "0.5"
simba = { version = "0.9", features = ["wide"] }

[[bench]]
name = "bench"
harness = false
