[package]
name = "planetmap"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
parry = ["parry3d-f64", "lru-slab"]

[dependencies]
na = { package = "nalgebra", version = "0.34.1" }
slab = "0.4.2"
hashbrown = "0.16"
parry3d-f64 = { version = "0.24.0", optional = true }
num-traits = "0.2.19"
lru-slab = { version = "0.1.1", optional = true }

[dev-dependencies]
criterion = "0.7.0"
approx = "0.5"
simba = { version = "0.9", features = ["wide"] }

[[bench]]
name = "bench"
harness = false
