[package]
name = "planetmap"
version = "0.1.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
parry = ["parry3d-f64", "lru-slab"]
fearless_simd = ["dep:fearless_simd"]

[dependencies]
na = { package = "nalgebra", version = "0.34.1" }
slab = "0.4.2"
hashbrown = "0.16"
parry3d-f64 = { version = "0.25.0", optional = true }
lru-slab = { version = "0.1.1", optional = true }
fearless_simd = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = "0.8.0"
approx = "0.5"
simba = { version = "0.9", features = ["wide"] }

[[bench]]
name = "bench"
harness = false
